昨日の作業分

--- a/Mame.vcxproj.filters
+++ b/Mame.vcxproj.filters
@@ -156,6 +156,13 @@
     <ClCompile Include="Source\Graphics\FrameBuffer\FrameBuffer.cpp">
       <Filter>Mame\Graphics\FrameBuffer</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Input\GamePad.cpp">
+      <Filter>Mame\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Input\Mouse.cpp">
+      <Filter>Mame\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Object\Character\Player\PlayerManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application\Application.h">
@@ -257,6 +264,13 @@
     <ClInclude Include="Source\Graphics\PostProcess\PostProcess.h">
       <Filter>Mame\Graphics\PostProcess</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Input\GamePad.h">
+      <Filter>Mame\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Input\Mouse.h">
+      <Filter>Mame\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Object\Character\Player\PlayerManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Source\Shader\Sprite.hlsli">
