Playerの描画システムをSpriteからSpriteBatchに変更。Objectを基底クラスにせっていし、Characterを継承。

--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -39,6 +39,9 @@
     <ClCompile Include="Source\Input\Input.cpp" />
     <ClCompile Include="Source\Input\Mouse.cpp" />
     <ClCompile Include="Source\Math\Transform.cpp" />
+    <ClCompile Include="Source\Object\Character\Character.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\Enemy.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyManager.cpp" />
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
     <ClCompile Include="Source\Object\Character\Player\PlayerManager.cpp" />
     <ClCompile Include="Source\Object\Object.cpp" />
@@ -76,6 +79,9 @@
     <ClInclude Include="Source\Math\MathHelper.h" />
     <ClInclude Include="Source\Math\MathHelperFloat2.h" />
     <ClInclude Include="Source\Math\Transform.h" />
+    <ClInclude Include="Source\Object\Character\Character.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\Enemy.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyManager.h" />
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
     <ClInclude Include="Source\Object\Character\Player\PlayerManager.h" />
     <ClInclude Include="Source\Object\Object.h" />
