--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -39,6 +39,8 @@
     <ClCompile Include="Source\Input\Input.cpp" />
     <ClCompile Include="Source\Input\Mouse.cpp" />
     <ClCompile Include="Source\Math\Transform.cpp" />
+    <ClCompile Include="Source\Object\Bullet\Bullet.cpp" />
+    <ClCompile Include="Source\Object\Bullet\BulletManager.cpp" />
     <ClCompile Include="Source\Object\Character\Character.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\Enemy.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyManager.cpp" />
@@ -79,6 +81,8 @@
     <ClInclude Include="Source\Math\MathHelper.h" />
     <ClInclude Include="Source\Math\MathHelperFloat2.h" />
     <ClInclude Include="Source\Math\Transform.h" />
+    <ClInclude Include="Source\Object\Bullet\Bullet.h" />
+    <ClInclude Include="Source\Object\Bullet\BulletManager.h" />
     <ClInclude Include="Source\Object\Character\Character.h" />
     <ClInclude Include="Source\Object\Character\Enemy\Enemy.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyManager.h" />
