--- a/Mame.vcxproj.filters
+++ b/Mame.vcxproj.filters
@@ -82,6 +82,9 @@
     <Filter Include="Mame\Object\Bullet">
       <UniqueIdentifier>{fe8e6a2b-2363-457e-be19-6cbc90a76d97}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Mame\Ai\StateMachine">
+      <UniqueIdentifier>{4612a493-6986-4fa5-8bb4-11c575040977}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Application\Main.cpp">
@@ -310,6 +313,12 @@
     </ClInclude>
     <ClInclude Include="Source\Object\Bullet\BulletManager.h">
       <Filter>Mame\Object\Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Ai\StateMachine\State.h">
+      <Filter>Mame\Ai\StateMachine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Ai\StateMachine\StateMachine.h">
+      <Filter>Mame\Ai\StateMachine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
