Bullet作ってる。一旦コミット

--- a/imgui.ini
+++ b/imgui.ini
@@ -60,6 +60,12 @@ Size=461,417
 Collapsed=0
 DockId=0x0000000E,0
 
+[Window][BulletManager]
+Pos=421,640
+Size=1023,413
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
 DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=X
   DockNode        ID=0x00000001 Parent=0x79094160 SizeRef=1436,1021 Split=X
@@ -68,7 +74,7 @@ DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=
       DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,412 Selected=0x79329BF2
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1023,1021 Split=Y Selected=0xE192E354
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1023,601 Selected=0xE192E354
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1023,413 CentralNode=1
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1023,413 CentralNode=1 Selected=0xE6780D98
   DockNode        ID=0x00000002 Parent=0x79094160 SizeRef=461,1021 Split=Y Selected=0xF6D15C51
     DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=461,599 Split=Y Selected=0xF6D15C51
       DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=461,602 Split=Y Selected=0xF6D15C51
