--- a/imgui.ini
+++ b/imgui.ini
@@ -66,6 +66,12 @@ Size=1023,413
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Bullet List]
+Pos=1451,636
+Size=461,417
+Collapsed=0
+DockId=0x0000000E,1
+
 [Docking][Data]
 DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=X
   DockNode        ID=0x00000001 Parent=0x79094160 SizeRef=1436,1021 Split=X
@@ -79,7 +85,7 @@ DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=
     DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=461,599 Split=Y Selected=0xF6D15C51
       DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=461,602 Split=Y Selected=0xF6D15C51
         DockNode  ID=0x0000000D Parent=0x0000000B SizeRef=461,597 Selected=0xF6D15C51
-        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=461,417 Selected=0x0AD2E5D3
+        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=461,417 Selected=0x77D9F484
       DockNode    ID=0x0000000C Parent=0x00000009 SizeRef=461,412 Selected=0x585C4195
     DockNode      ID=0x0000000A Parent=0x00000002 SizeRef=461,415 Selected=0x86C9C553
 
