--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -44,6 +44,7 @@
     <ClCompile Include="Source\Object\Bullet\BulletManager.cpp" />
     <ClCompile Include="Source\Object\Character\Character.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\Enemy.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyCharger.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyManager.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyNormal.cpp" />
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
@@ -90,6 +91,7 @@
     <ClInclude Include="Source\Object\Bullet\BulletManager.h" />
     <ClInclude Include="Source\Object\Character\Character.h" />
     <ClInclude Include="Source\Object\Character\Enemy\Enemy.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyCharger.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyManager.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyNormal.h" />
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
