--- a/Mame.vcxproj.filters
+++ b/Mame.vcxproj.filters
@@ -85,8 +85,11 @@
     <Filter Include="Mame\Ai\StateMachine">
       <UniqueIdentifier>{4612a493-6986-4fa5-8bb4-11c575040977}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Mame\Object\Character\Enemy\NormalEnemy">
+    <Filter Include="Mame\Object\Character\Enemy\EnemyNormal">
       <UniqueIdentifier>{3120b8b6-f0ab-4cd5-bdb0-be9d5d9b4fd2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mame\Object\Character\Enemy\EnemyCharger">
+      <UniqueIdentifier>{2791c298-fd37-46fa-ad03-e82656dbea41}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -193,10 +196,13 @@
       <Filter>Mame\Object\Bullet</Filter>
     </ClCompile>
     <ClCompile Include="Source\Object\Character\Enemy\EnemyNormal.cpp">
-      <Filter>Mame\Object\Character\Enemy\NormalEnemy</Filter>
+      <Filter>Mame\Object\Character\Enemy\EnemyNormal</Filter>
     </ClCompile>
     <ClCompile Include="Source\Collision\CollisionManager.cpp">
       <Filter>Mame\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyCharger.cpp">
+      <Filter>Mame\Object\Character\Enemy\EnemyCharger</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -330,10 +336,13 @@
       <Filter>Mame\Ai\StateMachine</Filter>
     </ClInclude>
     <ClInclude Include="Source\Object\Character\Enemy\EnemyNormal.h">
-      <Filter>Mame\Object\Character\Enemy\NormalEnemy</Filter>
+      <Filter>Mame\Object\Character\Enemy\EnemyNormal</Filter>
     </ClInclude>
     <ClInclude Include="Source\Collision\CollisionManager.h">
       <Filter>Mame\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyCharger.h">
+      <Filter>Mame\Object\Character\Enemy\EnemyCharger</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
