--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -44,9 +44,10 @@
     <ClCompile Include="Source\Object\Bullet\BulletManager.cpp" />
     <ClCompile Include="Source\Object\Character\Character.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\Enemy.cpp" />
-    <ClCompile Include="Source\Object\Character\Enemy\EnemyCharger.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyCharger\EnemyCharger.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyManager.cpp" />
-    <ClCompile Include="Source\Object\Character\Enemy\EnemyNormal.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyNormal\EnemyNormal.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyPlanaria\EnemyPlanaria.cpp" />
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
     <ClCompile Include="Source\Object\Character\Player\PlayerManager.cpp" />
     <ClCompile Include="Source\Object\Object.cpp" />
@@ -91,9 +92,10 @@
     <ClInclude Include="Source\Object\Bullet\BulletManager.h" />
     <ClInclude Include="Source\Object\Character\Character.h" />
     <ClInclude Include="Source\Object\Character\Enemy\Enemy.h" />
-    <ClInclude Include="Source\Object\Character\Enemy\EnemyCharger.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyCharger\EnemyCharger.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyManager.h" />
-    <ClInclude Include="Source\Object\Character\Enemy\EnemyNormal.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyNormal\EnemyNormal.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyPlanaria\EnemyPlanaria.h" />
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
     <ClInclude Include="Source\Object\Character\Player\PlayerManager.h" />
     <ClInclude Include="Source\Object\Object.h" />
