--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -52,6 +52,7 @@
     <ClCompile Include="Source\Object\Character\Enemy\Enemy.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyCharger\EnemyCharger.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyManager.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyNecromancer\EnemyNecromancer.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyNormal\EnemyNormal.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyPlanaria\EnemyPlanaria.cpp" />
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
@@ -106,6 +107,7 @@
     <ClInclude Include="Source\Object\Character\Enemy\Enemy.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyCharger\EnemyCharger.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyManager.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyNecromancer\EnemyNecromancer.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyNormal\EnemyNormal.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyPlanaria\EnemyPlanaria.h" />
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
