Collisionの仕組みを全て変更した。いらない変数消してないので後で消します。 次Skillを作るために枠組みを作成しました。

--- a/Mame.vcxproj.filters
+++ b/Mame.vcxproj.filters
@@ -115,6 +115,12 @@
     <Filter Include="Mame\Object\Character\Enemy\EnemyNecromancer">
       <UniqueIdentifier>{0da22c69-e3b4-4c1b-9005-4f272b3fa135}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Mame\Object\Skill">
+      <UniqueIdentifier>{b338c5dd-675b-4e08-bad5-2630a5a98039}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mame\Object\Skill\SkillChainLightning">
+      <UniqueIdentifier>{abaaba32-85a0-4bf2-980e-597f71bbe7ff}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Application\Main.cpp">
@@ -251,6 +257,18 @@
     </ClCompile>
     <ClCompile Include="Source\Object\Character\Enemy\EnemyNecromancer\EnemyNecromancer.cpp">
       <Filter>Mame\Object\Character\Enemy\EnemyNecromancer</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Collision\Collision.cpp">
+      <Filter>Mame\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Object\Skill\SkillChainLightning\SkillChainLightning.cpp">
+      <Filter>Mame\Object\Skill\SkillChainLightning</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Object\Skill\Skill.cpp">
+      <Filter>Mame\Object\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Object\Skill\SkillManager.cpp">
+      <Filter>Mame\Object\Skill</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -415,6 +433,18 @@
     </ClInclude>
     <ClInclude Include="Source\Object\Character\Enemy\EnemyNecromancer\EnemyNecromancer.h">
       <Filter>Mame\Object\Character\Enemy\EnemyNecromancer</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Collision\Collision.h">
+      <Filter>Mame\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Object\Skill\SkillChainLightning\SkillChainLightning.h">
+      <Filter>Mame\Object\Skill\SkillChainLightning</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Object\Skill\Skill.h">
+      <Filter>Mame\Object\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Object\Skill\SkillManager.h">
+      <Filter>Mame\Object\Skill</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
