--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="External\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="Source\Application\Application.cpp" />
     <ClCompile Include="Source\Application\Main.cpp" />
+    <ClCompile Include="Source\Collision\Collision.cpp" />
     <ClCompile Include="Source\Collision\CollisionManager.cpp" />
     <ClCompile Include="Source\Graphics\FrameBuffer\FrameBuffer.cpp" />
     <ClCompile Include="Source\Graphics\FullscreenQuad\FullscreenQuad.cpp" />
@@ -58,6 +59,9 @@
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
     <ClCompile Include="Source\Object\Character\Player\PlayerManager.cpp" />
     <ClCompile Include="Source\Object\Object.cpp" />
+    <ClCompile Include="Source\Object\Skill\Skill.cpp" />
+    <ClCompile Include="Source\Object\Skill\SkillChainLightning\SkillChainLightning.cpp" />
+    <ClCompile Include="Source\Object\Skill\SkillManager.cpp" />
     <ClCompile Include="Source\Resource\Sprite\Sprite.cpp" />
     <ClCompile Include="Source\Resource\Sprite\SpriteBatch.cpp" />
     <ClCompile Include="Source\Resource\Texture\Texture.cpp" />
@@ -83,6 +87,7 @@
     <ClInclude Include="Source\Application\Common.h" />
     <ClInclude Include="Source\Application\HighResolutionTimer.h" />
     <ClInclude Include="Source\Application\Misc.h" />
+    <ClInclude Include="Source\Collision\Collision.h" />
     <ClInclude Include="Source\Collision\CollisionManager.h" />
     <ClInclude Include="Source\Graphics\FrameBuffer\FrameBuffer.h" />
     <ClInclude Include="Source\Graphics\FullscreenQuad\FullscreenQuad.h" />
@@ -113,6 +118,9 @@
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
     <ClInclude Include="Source\Object\Character\Player\PlayerManager.h" />
     <ClInclude Include="Source\Object\Object.h" />
+    <ClInclude Include="Source\Object\Skill\Skill.h" />
+    <ClInclude Include="Source\Object\Skill\SkillChainLightning\SkillChainLightning.h" />
+    <ClInclude Include="Source\Object\Skill\SkillManager.h" />
     <ClInclude Include="Source\Resource\Sprite\Sprite.h" />
     <ClInclude Include="Source\Resource\Sprite\SpriteBatch.h" />
     <ClInclude Include="Source\Resource\Texture\Texture.h" />
