--- a/imgui.ini
+++ b/imgui.ini
@@ -84,12 +84,18 @@ Size=461,417
 Collapsed=0
 DockId=0x0000000E,1
 
+[Window][SkillManager]
+Pos=8,641
+Size=406,412
+Collapsed=0
+DockId=0x00000008,1
+
 [Docking][Data]
 DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=X
   DockNode        ID=0x00000001 Parent=0x79094160 SizeRef=1436,1021 Split=X
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=406,1021 Split=Y Selected=0x84527237
       DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=406,602 Selected=0x84527237
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,412 Selected=0x79329BF2
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,412 Selected=0x9CDBA047
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1023,1021 Split=Y Selected=0xE192E354
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1023,601 Selected=0xE192E354
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1023,413 CentralNode=1 Selected=0xE6780D98
@@ -97,7 +103,7 @@ DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=
     DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=461,599 Split=Y Selected=0xF6D15C51
       DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=461,602 Split=Y Selected=0xF6D15C51
         DockNode  ID=0x0000000D Parent=0x0000000B SizeRef=461,597 Selected=0xF6D15C51
-        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=461,417 Selected=0x34D21F9E
+        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=461,417 Selected=0x0AD2E5D3
       DockNode    ID=0x0000000C Parent=0x00000009 SizeRef=461,412 Selected=0x585C4195
     DockNode      ID=0x0000000A Parent=0x00000002 SizeRef=461,415 Selected=0x86C9C553
 
