--- a/imgui.ini
+++ b/imgui.ini
@@ -95,7 +95,7 @@ DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=
   DockNode        ID=0x00000001 Parent=0x79094160 SizeRef=1436,1021 Split=X
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=406,1021 Split=Y Selected=0x84527237
       DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=406,602 Selected=0x84527237
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,412 Selected=0x9CDBA047
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,412 Selected=0x79329BF2
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1023,1021 Split=Y Selected=0xE192E354
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1023,601 Selected=0xE192E354
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1023,413 CentralNode=1 Selected=0xE6780D98
