--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -42,6 +42,7 @@
     <ClCompile Include="Source\Input\Mouse.cpp" />
     <ClCompile Include="Source\Math\Transform.cpp" />
     <ClCompile Include="Source\Object\Bullet\Bullet.cpp" />
+    <ClCompile Include="Source\Object\Bullet\BulletHoming\BulletHoming.cpp" />
     <ClCompile Include="Source\Object\Bullet\BulletLevel1\BulletLevel1.cpp" />
     <ClCompile Include="Source\Object\Bullet\BulletLevel2\BulletLevel2.cpp" />
     <ClCompile Include="Source\Object\Bullet\BulletLevel3\BulletLevel3.cpp" />
@@ -105,6 +106,7 @@
     <ClInclude Include="Source\Math\MathHelperFloat2.h" />
     <ClInclude Include="Source\Math\Transform.h" />
     <ClInclude Include="Source\Object\Bullet\Bullet.h" />
+    <ClInclude Include="Source\Object\Bullet\BulletHoming\BulletHoming.h" />
     <ClInclude Include="Source\Object\Bullet\BulletLevel1\BulletLevel1.h" />
     <ClInclude Include="Source\Object\Bullet\BulletLevel2\BulletLevel2.h" />
     <ClInclude Include="Source\Object\Bullet\BulletLevel3\BulletLevel3.h" />
