--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="Source\Object\Character\Enemy\EnemyNormal\EnemyNormal.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyPlanaria\EnemyPlanaria.cpp" />
     <ClCompile Include="Source\Object\Character\Enemy\EnemyRobot\EnemyRobot.cpp" />
+    <ClCompile Include="Source\Object\Character\Enemy\EnemyRobot\EnemyRobotState.cpp" />
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
     <ClCompile Include="Source\Object\Character\Player\PlayerManager.cpp" />
     <ClCompile Include="Source\Object\Object.cpp" />
@@ -126,6 +127,7 @@
     <ClInclude Include="Source\Object\Character\Enemy\EnemyNormal\EnemyNormal.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyPlanaria\EnemyPlanaria.h" />
     <ClInclude Include="Source\Object\Character\Enemy\EnemyRobot\EnemyRobot.h" />
+    <ClInclude Include="Source\Object\Character\Enemy\EnemyRobot\EnemyRobotState.h" />
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
     <ClInclude Include="Source\Object\Character\Player\PlayerManager.h" />
     <ClInclude Include="Source\Object\Object.h" />
