--- a/Mame.vcxproj
+++ b/Mame.vcxproj
@@ -64,6 +64,9 @@
     <ClCompile Include="Source\Object\Character\Enemy\EnemyRobot\EnemyRobotState.cpp" />
     <ClCompile Include="Source\Object\Character\Player\Player.cpp" />
     <ClCompile Include="Source\Object\Character\Player\PlayerManager.cpp" />
+    <ClCompile Include="Source\Object\Effect\Effect.cpp" />
+    <ClCompile Include="Source\Object\Effect\EffectBlink\EffectBlink.cpp" />
+    <ClCompile Include="Source\Object\Effect\EffectManager.cpp" />
     <ClCompile Include="Source\Object\Object.cpp" />
     <ClCompile Include="Source\Object\Skill\Skill.cpp" />
     <ClCompile Include="Source\Object\Skill\SkillChainLightning\SkillChainLightning.cpp" />
@@ -130,6 +133,9 @@
     <ClInclude Include="Source\Object\Character\Enemy\EnemyRobot\EnemyRobotState.h" />
     <ClInclude Include="Source\Object\Character\Player\Player.h" />
     <ClInclude Include="Source\Object\Character\Player\PlayerManager.h" />
+    <ClInclude Include="Source\Object\Effect\Effect.h" />
+    <ClInclude Include="Source\Object\Effect\EffectBlink\EffectBlink.h" />
+    <ClInclude Include="Source\Object\Effect\EffectManager.h" />
     <ClInclude Include="Source\Object\Object.h" />
     <ClInclude Include="Source\Object\Skill\Skill.h" />
     <ClInclude Include="Source\Object\Skill\SkillChainLightning\SkillChainLightning.h" />
