--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][SceneManager]
 Pos=8,32
-Size=406,602
+Size=406,604
 Collapsed=0
 DockId=0x00000007,0
 
@@ -32,8 +32,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][EnemyManager]
-Pos=8,641
-Size=406,412
+Pos=8,643
+Size=406,410
 Collapsed=0
 DockId=0x00000008,0
 
@@ -85,8 +85,8 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Window][SkillManager]
-Pos=8,641
-Size=406,412
+Pos=8,643
+Size=406,410
 Collapsed=0
 DockId=0x00000008,1
 
@@ -109,8 +109,8 @@ Collapsed=0
 DockSpace         ID=0x79094160 Window=0xDEDC5B90 Pos=8,32 Size=1904,1021 Split=X
   DockNode        ID=0x00000001 Parent=0x79094160 SizeRef=1436,1021 Split=X
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=406,1021 Split=Y Selected=0x84527237
-      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=406,602 Selected=0x84527237
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,412 Selected=0x9CDBA047
+      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=406,604 Selected=0x84527237
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=406,410 Selected=0x79329BF2
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1023,1021 Split=Y Selected=0xE192E354
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1023,601 Selected=0xE192E354
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1023,413 CentralNode=1 Selected=0xE6780D98
